# Proyecto-PB-Primera-Parte

./: .gitignore  Compras.txt  Dudas para Edna.txt  Ejemplo.c  Lectura_Insumos.c  Lectura_Proveedores.c  README.md  Ventas.txt  estructuras.c  estructuras.h  funciones.c  funciones.h  lecturacompras.c  main  main.c  pruebainsumos.c
Registros vacios/: Crear_registros_vacios_Insumos.c  Crear_registros_vacios_Proveedores.c
VER COMO SE ESCRIBEN/: Lectura_Insumos.c  Lectura_Mercados.c  Lectura_Proveedores.c  Lectura_empelados.cpp  VerArticulos.c
main.dSYM/Contents/Resources/DWARF/: main
parcial 3/: CMakeLists.txt  EJERCICIO_8_P3.cpp  Ejercicio1.cpp  Ejercicio3_P3.cpp  Ejercicio9.cpp  Ejercicio_5.cpp  Hilos_repeticiones.cpp  banderas.cpp  banderas2.cpp  campo.cpp  cientifico.cpp  correos.txt  crearEspacio.c  errores.cpp  hilos.cpp  main.cpp  manUsuario.cpp  optional.cpp  precision.cpp  programa 3.6.cpp  programa7.cpp  programaParaClase.cpp
parcial 3/ENTRADASALIDA/: P10_CALIFICACION.cpp  P11CIN_GET.cpp  P12_CIN_GETLINE.cpp  P13_LEER_GETLINE.cpp  P14_READ_WRITE.cpp  P1_SOLA_LINEA.cpp  P2_DOS_INSERCCIONES.cpp  P3_ENDL.cpp  P4_CONCATENAR.cpp  P5_PUNTERO.cpp  P6_PUTS.cpp  P7_ENTRA2NUMEROS.cpp  P9_NUMEROSIGUALES.cpp
parcial 3/Expresiones Regulares (Presentacion)/: Fecha.cpp  Match.cpp  Replace.cpp  Search.cpp
