cmake_minimum_required(VERSION 3.28)
project(untitled11)

set(CMAKE_CXX_STANDARD 17)

add_executable(untitled11 main.cpp)
add_executable(prec precision.cpp)
add_executable(campo campo.cpp)
add_executable(man manUsuario.cpp)
add_executable(banderas banderas.cpp)
add_executable(banderas2 banderas2.cpp)
add_executable(cientifico cientifico.cpp)
add_executable(errores errores.cpp)
